fix(hideSidebarPro): Resolve issue where sidebar remained visible

--- a/src/userplugins/hideSidebarPro/style.css
+++ b/src/userplugins/hideSidebarPro/style.css
@@ -1,72 +1,28 @@
 /* HideSidebarPro Styles */
 
-body.vc-hds-hide-servers [class*="sidebar_"] {
-  transition: all 0.25s ease;
-  width: 0 !important;
-  padding-left: 5vmin !important;
-}
-
-body.vc-hds-hide-servers [class*="sidebar_"]:hover {
-  width: 240px !important;
-  padding-left: 0 !important;
-}
-
-body.vc-hds-hide-servers [class*="sidebar_"] > * {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s 0.25s, opacity 0.25s linear;
-}
-
-body.vc-hds-hide-servers [class*="sidebar_"]:hover > * {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.25s linear;
-}
-
 /* Members List */
-body.vc-hds-hide-members [class^="container_"] > aside[class*="membersWrap_"] {
-  transition: all 0.25s ease;
+body.vc-hds-hide-members [class*="membersWrap"] {
+    transition: width 0.25s ease, min-width 0.25s ease, flex-basis 0.25s ease !important;
+    width: 10px !important;
+    min-width: 10px !important;
+    flex-basis: 10px !important;
+    overflow: hidden !important;
 }
 
-body.vc-hds-hide-members [class^="container_"] > aside[class*="membersWrap_"]:hover {
-  width: 240px !important;
-  padding-left: 0 !important;
+body.vc-hds-hide-members [class*="membersWrap"]:hover {
+    width: 240px !important;
+    min-width: 240px !important;
+    flex-basis: 240px !important;
 }
 
-body.vc-hds-hide-members [class^="container_"] > aside[class*="membersWrap_"]:not(:hover) {
-  padding-left: 0;
-  min-width: 5vmin;
-  width: 0;
+body.vc-hds-hide-members [class*="membersWrap"] > * {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.25s, opacity 0.25s linear;
 }
 
-body.vc-hds-hide-members [class^="container_"] > aside[class*="membersWrap_"] > * {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s 0.25s, opacity 0.25s linear;
-}
-
-body.vc-hds-hide-members [class^="container_"] > aside[class*="membersWrap_"]:hover > * {
-  visibility: visible;
-  opacity: 1;
-  transition: opacity 0.25s linear;
-}
-
-/* Small Server List */
-body.vc-hds-small-server-list nav[aria-label="Servers sidebar"] {
-  width: 55px;
-}
-
-body.vc-hds-small-server-list nav[aria-label="Servers sidebar"] ul[class^="tree_"] div {
-  align-self: center;
-  justify-self: center;
-}
-
-body.vc-hds-small-server-list nav[aria-label="Servers sidebar"] div[class^="listItem_"] {
-  align-self: center;
-  justify-self: center;
-}
-
-body.vc-hds-small-server-list [class^="wrapper_c5f96a"] {
-  height: 35px !important;
-  width: 35px !important;
+body.vc-hds-hide-members [class*="membersWrap"]:hover > * {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.25s linear;
 }
